--- a/package.json
+++ b/package.json
@@ -7,5 +7,20 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^16.4.2",
+    "react-helmet": "^5.2.0",
+    "react-router": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-persist": "^5.10.0",
+    "redux-saga": "^0.16.0"
+  },
+  "devDependencies": {
+    "react-dev-utils": "^5.0.1",
+    "react-error-overlay": "^4.0.0",
+    "react-hot-loader": "^4.3.4",
+    "webpack": "^4.16.5",
+    "webpack-dev-server": "^3.1.5"
+  }
 }
