--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "redux-saga": "^0.16.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^3.2.0",
     "react-dev-utils": "^5.0.1",
     "react-error-overlay": "^4.0.0",
     "react-hot-loader": "^4.3.4",
