--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "test",
   "version": "1.0.0",
   "description": "I can describe",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --mode development --open",
+    "dev": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode production",
+    "suite": "npm run build; node dist/server.js",
+    "server": "node dist/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,9 +26,11 @@
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
     "react-dev-utils": "^5.0.1",
+    "react-dom": "^16.4.2",
     "react-error-overlay": "^4.0.0",
     "react-hot-loader": "^4.3.4",
     "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
   }
 }
