--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^7.1.5",
     "react": "^16.4.2",
     "react-helmet": "^5.2.0",
     "react-router": "^4.3.1",
