--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "babel-loader": "^7.1.5",
+    "css-loader": "^1.0.0",
     "react": "^16.4.2",
     "react-helmet": "^5.2.0",
     "react-router": "^4.3.1",
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "style-loader": "^0.23.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
