--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "babel-loader": "^7.1.5",
     "css-loader": "^1.0.0",
+    "express": "^4.15.2",
     "react": "^16.4.2",
     "react-helmet": "^5.2.0",
     "react-router": "^4.3.1",
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
     "redux-saga": "^0.16.0",
+    "socket.io": "^2.1.1",
     "style-loader": "^0.23.0"
   },
   "devDependencies": {
