--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^7.1.5",
     "css-loader": "^1.0.0",
     "express": "^4.15.2",
+    "johnny-five": "^1.0.0",
     "react": "^16.4.2",
     "react-helmet": "^5.2.0",
     "react-router": "^4.3.1",
