--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
     "redux-saga": "^0.16.0",
+    "serialport": "^7.1.3",
     "socket.io": "^2.1.1",
     "style-loader": "^0.23.0"
   },
