--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-error-overlay": "^4.0.0",
     "react-hot-loader": "^4.3.4",
+    "url-loader": "^2.0.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.7.2"
