--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "I can describe",
   "main": "src/main.js",
+  "homepage": "https://ubcspin.github.io/TouchSensor",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development --open",
     "dev": "webpack-dev-server --mode development --open",
@@ -18,6 +21,7 @@
     "css-loader": "^1.0.0",
     "d3": "^5.9.2",
     "express": "^4.17.1",
+    "gh-pages": "^2.0.1",
     "johnny-five": "^1.0.0",
     "pressure": "^2.1.2",
     "react": "^16.4.2",
